[SG-1378] Fix overflow

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-data-story.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-data-story.scss
@@ -352,7 +352,7 @@
 
   .sfgov-toc-tree {
     flex: 1;
-    overflow: scroll;
+    overflow-y: auto;
 
     @media screen and (min-width: $medium-screen) {
       border-radius: 8px;
